...
        <View style={[styles.formContainer, {}]}>
          <View style={[styles.fieldContainer, {}]}>
            <TextInput
              placeholder="Enter code"
              style={[styles.titleText, { color: theme.text }]}
              placeholderTextColor={theme.grey500}
              returnKeyType='done'
              multiline
              blurOnSubmit
              value={title}
              onChangeText={setTitle}
            />
          </View>
...
          <Pressable
            style={[styles.saveButton, { backgroundColor: '#007AFF' }]}
            onPress={() => {
              console.log('Title:', title, 'Start:', start, 'End:', end, 'Location:', location);
              router.back()
            }}
            accessibilityLabel="Save"
          >
            <Text style={[styles.saveButtonText, { color: '#fff' }]}> Save </Text>
          </Pressable>
        </View>

        {/* Date Pickers */}
...
