...
    )
  }

  return (
    <FormContainer>
      <View style={styles.fieldContainer}>
        <PrimaryTextInputField placeholder='Enter title' value={title} onChangeText={setTitle} />
        <DateTimePicker date={date} setDate={setDate} dueType={dueType} setDueType={setDueType} />
        <CoursePicker courseID={courseID} setCourseID={setCourseID} />
        <TextInputField placeholder="Add notes" value={notes} onChangeText={setNotes} />
      </View>
      <ButtonRow confirmDelete={confirmDelete} create={createAssignment} update={updateAssignment} isCreateForm={id === undefined} disabled={!assignmentInsertSchema.safeParse(assignment).success} />
    </FormContainer>
...
