appId: com.gloryomos.scholarly
---
- launchApp
- tapOn: tasks.*
- tapOn:
      id: add task button
- tapOn: Enter title
- inputText:
      text: Test task
- tapOn: done
- tapOn: Save
- scroll
- assertVisible: Test task
- tapOn:
      text: More
      index: 4
- tapOn: Edit Task
- tapOn: Test task
- eraseText
- inputText: Edited task
- tapOn: done
- tapOn: Save
- scroll
- assertVisible: Edited task
- tapOn:
      text: More
      index: 4
- tapOn: Delete Task
- tapOn: Delete task
- assertNotVisible: Edited task
# - tapOn:
#     text: More
#     childOf:
#       id: Test task
